resolved problems post merge

--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -97,6 +97,7 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/subgroup/shared_arithmetic_portability.glsl"
   "nbl/builtin/glsl/subgroup/basic_portability.glsl"
   "nbl/builtin/glsl/subgroup/arithmetic_portability.glsl"
+  "nbl/builtin/glsl/subgroup/arithmetic_portability_impl.glsl"
   # utilities
   "nbl/builtin/glsl/utils/indirect_commands.glsl"
   "nbl/builtin/glsl/utils/common.glsl"
