New API classes

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -36,6 +36,9 @@ add_subdirectory(openssl openssl EXCLUDE_FROM_ALL)
 # volk
 if (Vulkan_FOUND)
 	set(VOLK_PULL_IN_VULKAN ON)
+	if (WIN32)
+		set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)
+	endif()
 	add_subdirectory(volk volk EXCLUDE_FROM_ALL)
 endif(Vulkan_FOUND)
 
