Almost whole needed-for-now Vulkan done
Some api redesign will be needed, some small fixes, etc...
Next point is GL implementation, then an example with 2 windows, and finally finishing Vulkan with images, image views, buffers, graphics pipeline and probably more

--- a/src/nbl/CMakeLists.txt
+++ b/src/nbl/CMakeLists.txt
@@ -263,6 +263,10 @@ set(NABLA_SRCS_NORMAL
 	# Vulkan
 	${NBL_ROOT_PATH}/src/nbl/video/CSurfaceVKWin32.cpp
 	${NBL_ROOT_PATH}/src/nbl/video/CVKSwapchain.cpp
+	${NBL_ROOT_PATH}/src/nbl/video/CVulkanFence.cpp
+	${NBL_ROOT_PATH}/src/nbl/video/CVulkanImage.cpp
+	${NBL_ROOT_PATH}/src/nbl/video/CVulkanQueue.cpp
+	${NBL_ROOT_PATH}/src/nbl/video/CVulkanSemaphore.cpp
 
 	#opengl
 	${NBL_ROOT_PATH}/source/Nabla/COpenCLHandler.cpp
