--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -85,6 +85,7 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/random/xoroshiro.glsl"
   # sampling
   "nbl/builtin/glsl/sampling/bilinear.glsl"
+  "nbl/builtin/glsl/sampling/box_muller_transform.glsl"
   "nbl/builtin/glsl/sampling/concentric_mapping.glsl"
   "nbl/builtin/glsl/sampling/cos_weighted.glsl"
   "nbl/builtin/glsl/sampling/linear.glsl"
