put glTF after to-Nabla migration on it's foot, works again

--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -23,6 +23,15 @@ set(nbl_resources_to_embed
   "nbl/builtin/shaders/loaders/mtl/fragment_impl.glsl"
   "nbl/builtin/shaders/loaders/mtl/fragment_no_uv.frag"
   "nbl/builtin/shaders/loaders/mtl/fragment_uv.frag"
+  "nbl/builtin/shaders/loaders/gltf/common.glsl"
+  "nbl/builtin/shaders/loaders/gltf/vertex_impl.glsl"
+  "nbl/builtin/shaders/loaders/gltf/vertex_uv.vert"
+  "nbl/builtin/shaders/loaders/gltf/vertex_color.vert"
+  "nbl/builtin/shaders/loaders/gltf/vertex_no_uv_color.vert"
+  "nbl/builtin/shaders/loaders/gltf/fragment_impl.glsl"
+  "nbl/builtin/shaders/loaders/gltf/fragment_uv.frag"
+  "nbl/builtin/shaders/loaders/gltf/fragment_color.frag"
+  "nbl/builtin/shaders/loaders/gltf/fragment_no_uv_color.frag"
   "nbl/builtin/specializedshaders/fullscreentriangle.vert"
   "nbl/builtin/materials/lambertian/singletexture/specializedshader.vert"
   "nbl/builtin/materials/lambertian/singletexture/specializedshader.frag"
