--- a/include/nbl/config/BuildConfigOptions.h.in
+++ b/include/nbl/config/BuildConfigOptions.h.in
@@ -31,6 +31,8 @@
 #cmakedefine _NBL_COMPILE_WITH_TGA_LOADER_
 #cmakedefine _NBL_COMPILE_WITH_OPENEXR_LOADER_
 #cmakedefine _NBL_COMPILE_WITH_GLI_LOADER_
+#cmakedefine _NBL_COMPILE_WITH_GLTF_LOADER_
+#cmakedefine _NBL_COMPILE_WITH_BIN_LOADER_
 
 // writers
 #cmakedefine _NBL_COMPILE_WITH_STL_WRITER_
@@ -41,6 +43,8 @@
 #cmakedefine _NBL_COMPILE_WITH_PNG_WRITER_
 #cmakedefine _NBL_COMPILE_WITH_OPENEXR_WRITER_
 #cmakedefine _NBL_COMPILE_WITH_GLI_WRITER_
+#cmakedefine _NBL_COMPILE_WITH_GLTF_WRITER_
+#cmakedefine _NBL_COMPILE_WITH_BIN_WRITER_
 
 // compute interop
 #cmakedefine _NBL_COMPILE_WITH_OPENCL_
