Nabla builds with EGL as an API for framebuffer and GL contexts creation
On Windows, cant verify that it builds on Linux as well
Untested yet

--- a/src/nbl/CMakeLists.txt
+++ b/src/nbl/CMakeLists.txt
@@ -464,7 +464,7 @@ if (NBL_COMPILE_WITH_CUDA)
 endif()
 
 target_compile_definitions(Nabla 
-	PRIVATE	_NBL_STATIC_LIB_ SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS $<$<BOOL:${WIN32}>:VK_USE_PLATFORM_WIN32_KHR>
+	PRIVATE	_NBL_STATIC_LIB_ EGL_STATIC SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS $<$<BOOL:${WIN32}>:VK_USE_PLATFORM_WIN32_KHR>
 	PUBLIC	UNW_LOCAL_ONLY
 )
 
