added 49.RadixSort bin file to ignore, added EXTRA_SOURCE->Vec2D.cpp to CmakeLists.txt, replaced name from ill named own namespace to RadixSort, 2's parametrized constructor becomes inline

--- a/examples_tests/49.Radix_Sort/CMakeLists.txt
+++ b/examples_tests/49.Radix_Sort/CMakeLists.txt
@@ -4,4 +4,14 @@ if(NOT RES)
 	message(FATAL_ERROR "common.cmake not found. Should be in {repo_root}/cmake directory")
 endif()
 
-nbl_create_executable_project("" "" "" "")
+set(EXTRA_SOURCES
+	Vec2D.cpp
+)
+
+
+nbl_create_executable_project(
+	"${EXTRA_SOURCES}"
+	""
+	""
+	""
+)
