--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -134,6 +134,7 @@ set(nbl_resources_to_embed
   #"nbl/builtin/glsl/ext/.glsl"
   "nbl/builtin/glsl/ext/FFT/default_compute_fft.comp"
   "nbl/builtin/glsl/ext/FFT/fft.glsl"
+  "nbl/builtin/glsl/ext/FFT/parameters_struct.glsl"
   "nbl/builtin/glsl/ext/FFT/parameters.glsl"
   "nbl/builtin/glsl/ext/FFT/normalization.comp"
   "nbl/builtin/glsl/ext/LumaMeter/common.glsl"
