add a workgroup/fft.glsl

--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -120,6 +120,7 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/workgroup/shared_arithmetic.glsl"
   "nbl/builtin/glsl/workgroup/shared_ballot.glsl"
   "nbl/builtin/glsl/workgroup/shared_clustered.glsl"
+  "nbl/builtin/glsl/workgroup/shared_fft.glsl"
   "nbl/builtin/glsl/workgroup/shared_shuffle.glsl"
   "nbl/builtin/glsl/workgroup/shared_shuffle_relative.glsl"
   "nbl/builtin/glsl/workgroup/shared_vote.glsl"
@@ -127,6 +128,7 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/workgroup/ballot.glsl"
   "nbl/builtin/glsl/workgroup/basic.glsl"
   "nbl/builtin/glsl/workgroup/clustered.glsl"
+  "nbl/builtin/glsl/workgroup/fft.glsl"
   "nbl/builtin/glsl/workgroup/shuffle.glsl"
   "nbl/builtin/glsl/workgroup/shuffle_relative.glsl"
   "nbl/builtin/glsl/workgroup/vote.glsl"
