--- a/include/nbl/config/BuildConfigOptions.h.in
+++ b/include/nbl/config/BuildConfigOptions.h.in
@@ -14,6 +14,7 @@
 #cmakedefine _NBL_PLATFORM_WINDOWS_
 #cmakedefine _NBL_PLATFORM_LINUX_
 #cmakedefine _NBL_PLATFORM_OSX_
+#cmakedefine _NBL_PLATFORM_ANDROID_
 
 // graphics API backend
 #cmakedefine _NBL_COMPILE_WITH_OPENGL_
