Make scan_op and identity compile-time constants and provide default upsweep and downsweep shaders

--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -138,6 +138,9 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/ext/Scan/default_upsweep.comp"
   "nbl/builtin/glsl/ext/Scan/default_downsweep.comp"
   "nbl/builtin/glsl/ext/Scan/scan.glsl"
+  "nbl/builtin/glsl/ext/Scan/parameters_struct.glsl"
+  "nbl/builtin/glsl/ext/Scan/default_sweep_common.glsl"
+  "nbl/builtin/glsl/ext/Scan/parameters.glsl"
   "nbl/builtin/glsl/ext/FFT/default_compute_fft.comp"
   "nbl/builtin/glsl/ext/FFT/fft.glsl"
   "nbl/builtin/glsl/ext/FFT/parameters_struct.glsl"
