use pitch, move derivative map creation to utilities

--- a/.gitmodules
+++ b/.gitmodules
@@ -102,6 +102,6 @@
 [submodule "3rdparty/simdjson"]
 	path = 3rdparty/simdjson
 	url = https://github.com/simdjson/simdjson
-[submodule "glTFSampleModels"]
+[submodule "3rdparty/glTFSampleModels"]
 	path = 3rdparty/glTFSampleModels
 	url = https://github.com/KhronosGroup/glTF-Sample-Models
