Added FORCE attribute for EGL_NO_GLEW
Without it my cmake just discarded it when building.

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -91,7 +91,7 @@ if (NBL_COMPILE_WITH_SDL2)
 endif()
 
 # EGL
-set(EGL_NO_GLEW ON)
+set(EGL_NO_GLEW ON FORCE)
 add_subdirectory(EGL/EGL)
 
 # zlib (target is zlibstatic)
